# graph-experiments

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE  Makefile  README.md
app/: CMakeLists.txt  demo-boost.cpp  demo-dijkstra.cpp  demo-ogr.cpp  demo-shared.cpp  demo-store.cpp
docs/: build-debian.md  build-docker.md  build-windows.md
example/: CMakeLists.txt  demo-PathTree.cpp  demo-boost.cpp  demo-dijkstra.cpp  demo-ogr.cpp
src/egraph/: DefaultEdge.h  DefaultGraph.h  Direction.h  Edge.h  FeatureGraph.h  FeatureGraphLoader.cpp  FeatureGraphLoader.h  Graph.h  GraphBuilder.h  LineString.cpp  LineString.h  Loader.cpp  Loader.h  LoaderParams.h  OGRGraph.cpp  OGRGraph.h  Point.h  Store.cpp  Store.h  Vertex.h
src/egraph/algorithm/: PathTree.h  PathTreeNode.h  ShortestPathTree.h  ShortestPathTreeBuilder.h
src/egraph/concept/: cost.cpp  cost.h  fid.cpp  fid.h  reverseCost.cpp  reverseCost.h  wkt.cpp  wkt.h
src/egraph/helper/: csv.cpp  csv.h  ogr.cpp  ogr.h
src/egraph/routing/: PathTree.h  PathTreeBuilder.h  PathTreeNode.h
src/ezgdal/: ezgdal.cpp  ezgdal.h
tests/: CMakeLists.txt  CsvTest.cpp  PathTreeBuilderTest.cpp  PathTreeNodeTest.cpp  PathTreeTest.cpp  TestModule.cpp  test_config.h.cmake
tests/egraph/: TestGraph.cpp  TestGraph.h
tests/egraph/helper/: CsvTest.cpp
tests/egraph/routing/: PathTreeBuilderTest.cpp  PathTreeNodeTest.cpp  PathTreeTest.cpp
tests/ezgdal/: EzgdalRegressTest.cpp
tests/ezgdal/data/: sample.csv
trash/egraph/: DefaultEdge.h  DefaultGraph.h  DefaultVertex.h  Edge.h  Graph.h  Point.cpp  Point.h  Store.cpp  Store.h  Vertex.h
trash/egraph/algorithm/: ShortestPathTreeBuilder.h
